--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <img src="Images/BirthdayProjectImg.png" alt="image of birthday cake project highlighting the project">
     
         <h3><a href="../Portfolio Project/Public/movie-ranking.html">Movie Ranking Project</a></h3>
-        <img src="../Portfolio Project/Images/MovieRankingProjectImg.png">
+        <img src="Images/MovieRankingProjectImg.png">
     <hr>
     <h2><a href="../Portfolio Project/Public/about-me.html">About Me</a></h2>
-    <a href="mailto:tyler.white723@gmail.com"><img src="../Portfolio Project/Images/gmail-logo-img.png" height="50"></a>        
-    <a href="https://www.linkedin.com/in/tyler-white-mba-724ba51b/"><img src="../Portfolio Project/Images/linkedin-img.png" height="50"></a>
+    <a href="mailto:tyler.white723@gmail.com"><img src="Images/gmail-logo-img.png" height="50"></a>        
+    <a href="https://www.linkedin.com/in/tyler-white-mba-724ba51b/"><img src="Images/linkedin-img.png" height="50"></a>
 
 </body>
 </html>
